# chameleon

./:    .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: profiles.yaml
puml_files/: 24d83419b0d1e893954ecb4b162fd7ee52c258e1_01.puml  2806cdfe34ec6aa0f8ddf46800983c5f311fd5d0_09.puml  5ddf5fe092240e6e75f448b9cbf8a793c15f2ebf_03.puml  78c48b855bbcae72d9ccd6dea408ca0bd810e6a1_31.puml  8079cc93f24862c0caa603e00fce1bc1da687e4f_08.puml  833fe4709a75c0f2dbd667dcd8e8fffe08108691_31.puml  8a0f0377dcf7cdb708725efff90e5c0cc48c27b8_01.puml  8c9ee5fab52c87ee30bf438f943de98206e763ed_09.puml  92629660d9b18a607083e58fab8782d3c50e6b59_31.puml  9e8e9c7a6b60b9e4bc039cd41aab1af5e0191d50_01.puml  af9a46da325e8546301d28b7410012b6cfa235d6_01.puml  bdd3c66b36106820001d3dcffda1fad0a6b10f4f_01.puml  c6ab67cb111bba473b31a5a152e62e56aaea8f9f_07.puml  c990982ec610437c1a8c6f18c60c7c5e1427ba04_09.puml  e266e206175ff34d89505e644e3d529cbc425143_04.puml
scripts/: run_e2e.py
src/chameleon/: cli.py  config_gen.py  manifest.py  profile.py  renderer.py  sampler.py
tests/: test_cli.py  test_config_gen.py  test_manifest.py  test_profile.py  test_renderer.py  test_sampler.py  test_smoke.py
tests/fixtures/: profiles_e2e.yaml
tests/fixtures/tiny_dataset/: activity.puml  class.puml  sequence.puml  state.puml  usecase.puml
